<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pocket Beats</string>
    <string name="search_hint">Search songs…</string>
    <string name="no_music">No music found</string>
    <string name="sort_title">Sort: Title</string>
    <string name="sort_artist">Sort: Artist</string>
    <string name="sort_album">Sort: Album</string>
    <string name="shuffle_off">Shuffle: Off</string>
    <string name="shuffle_on">Shuffle: On</string>
    <string name="repeat_off">Repeat: Off</string>
    <string name="repeat_all">Repeat: All</string>
    <string name="repeat_one">Repeat: One</string>
    <string name="now_playing">Now Playing</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_next">Next</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="tab_songs">Songs</string>
    <string name="tab_artists">Artists</string>
    <string name="tab_albums">Albums</string>
    <string name="tab_playlists">Playlists</string>
    <string name="menu_shuffle">Shuffle</string>
    <string name="menu_repeat">Repeat</string>
    <string name="menu_add_to_playlist">Add to Playlist</string>
    <string name="play_all">Play All</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="new_playlist">+ New Playlist</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="rename_playlist">Rename Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="remove_from_playlist">Remove from Playlist</string>
    <string name="play_next">Play Next</string>
    <string name="playlist_name_hint">Playlist name</string>
    <string name="added_to_playlist">Added to playlist</string>
    <string name="removed_from_playlist">Removed from playlist</string>
    <string name="playlist_created">Playlist created</string>
    <string name="playlist_deleted">Playlist deleted</string>
    <string name="playlist_renamed">Playlist renamed</string>
    <string name="no_playlists">No playlists yet</string>
    <string name="songs_count">%d songs</string>
    <string name="one_song">1 song</string>
</resources>
